# PSNT

./: .env.example  .gitignore  .vercelignore  app.py  flask_app.py  pyproject.toml  requirements.txt  workouts.db
instance/: test_dash_date.db  test_dash_fix.db  test_direct.db  test_direct3.db  test_direct4.db  test_perf.db  test_perf_final.db
static/exercises/: translations_it.json
templates/: 404.html  500.html  add_workout.html  admin.html  amici.html  base.html  day_view.html  edit_workout.html  exercise_autocomplete.html  exercise_detail.html  friend_routine_detail.html  friend_routines.html  friend_stats.html  index.html  landing.html  login.html  manage_routine.html  notifications.html  profile.html  register.html  search.html  session_view.html  stats.html  view_workout.html
