[project]
name = "workout-tracker"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Login==0.6.3",
    "Flask-WTF==1.2.1",
    "WTForms==3.1.1",
    "email-validator==2.2.0",
    "Werkzeug==3.0.1",
    "psycopg2-binary==2.9.10",
]

[tool.vercel]
entrypoint = "flask_app:app"
